tests/paczka1/fuzzy1/95688900.err
Error in line 8: VgAat A949 44,1
Error in line 17: AGQMh8M6 A949 11,45
Error in line 7: jF1vT S997 90,4
Error in line 23: jF1vT A949 76,5
